fixed handlebars for my DB

--- a/views/add.hbs
+++ b/views/add.hbs
@@ -13,6 +13,8 @@
     <input name="name" class="field"><br><br>
     <label>Description</label><br>
     <input name="description" class="field"><br><br>
+    <label>Ownership</label><br>
+    <input name="ownership" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">To list of object</a>
