--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -14,6 +14,8 @@
     <input name="name" value="{{object.name}}"  class="field"><br><br>
     <label>Description</label><br>
     <input name="description" value="{{object.description}}"  class="field"><br><br>
+    <label>Ownership</label><br>
+    <input name="ownership" value="{{object.description}}"  class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">To object list </a>
