--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,8 +51,8 @@
     {{#each pollution}}
         <tr>
             <td>{{this.idpollution}}</td>
-            <td>{{this.idobject}}</td>
-            <td>{{this.idpollutant}}</td>
+            <td>{{this.name}}</td>
+            <td>{{this.name_pollutant}}</td>
             <td>{{this.valuepollution}}</td>
             <td>{{this.year}}</td>
             <td>
