--- a/views/edit-pollution.hbs
+++ b/views/edit-pollution.hbs
@@ -9,11 +9,19 @@
 <body>
 <h1>Edit pollution</h1>
 <form action="/edit-pollution" method="POST">
-    <input type="hidden" name="idpollution" value="{{pollution.idpollution}}">
+    <input type="hidden" name="idpollution" value="{{pollution.idpollution}}" class="field">
     <label>Object</label><br>
-    <input name="idobject" value="{{pollution.idobject}}"  class="field"><br><br>
+    <select name="idobject">
+        {{#each object}}
+            <option value="{{this.idobject}}">{{this.name}}</option>
+        {{/each}}
+    </select><br><br>
     <label>Pollutant</label><br>
-    <input name="idpollutant" value="{{pollution.idpollutant}}"  class="field"><br><br>
+    <select name="idpollutant">
+        {{#each pollutant}}
+            <option value="{{this.idpollutant}}">{{this.name_pollutant}}</option>
+        {{/each}}
+    </select><br><br>
     <label>Value</label><br>
     <input name="valuepollution" value="{{pollution.valuepollution}}"  class="field"><br><br>
     <label>Year</label><br>
