--- a/views/object/add-object.hbs
+++ b/views/object/add-object.hbs
@@ -17,6 +17,6 @@
     <input name="ownership" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
-<a href="/">To list of object</a>
+<a href="/">GO BACK</a>
 </body>
 <html>
