--- a/views/object/edit-object.hbs
+++ b/views/object/edit-object.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Edit object</h1>
-<form action="/edit" method="POST">
+<form action="/edit-object" method="POST">
     <input type="hidden" name="idobject" value="{{object.idobject}}">
     <label>Name</label><br>
     <input name="name" value="{{object.name}}"  class="field"><br><br>
@@ -18,6 +18,6 @@
     <input name="ownership" value="{{object.description}}"  class="field"><br><br>
     <input type="submit" value="Send">
 </form>
-<a href="/">To object list </a>
+<a href="/">GO BACK</a>
 </body>
 <html>
