--- a/views/pollutant/add-pollutant.hbs
+++ b/views/pollutant/add-pollutant.hbs
@@ -13,6 +13,8 @@
     <input name="name_pollutant" class="field"><br><br>
     <label>Mass Consumption</label><br>
     <input name="mass_consumption" class="field"><br><br>
+    <label>Tax</label><br>
+    <input name="tax" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
