--- a/views/pollutant/edit-pollutant.hbs
+++ b/views/pollutant/edit-pollutant.hbs
@@ -14,6 +14,8 @@
     <input name="name_pollutant" value="{{pollutant.name_pollutant}}"  class="field"><br><br>
     <label>Mass Consumption</label><br>
     <input name="mass_consumption" value="{{pollutant.mass_consumption}}"  class="field"><br><br>
+    <label>Tax</label><br>
+    <input name="tax" value="{{pollutant.tax}}"  class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
