--- a/views/index.hbs
+++ b/views/index.hbs
@@ -65,5 +65,20 @@
         </tr>
     {{/each}}
 </table>
+<h1>List of results</h1>
+<form action="/calculate-results" method="POST" style="display:inline;">
+    <input type="submit" value="Calculate Results" >
+</form>
+<table>
+    <tr><th>N</th><th>Object</th><th>Pollutant</th><th>Value (UAH)</th></tr>
+    {{#each results}}
+        <tr>
+            <td>{{this.idresults}}</td>
+            <td>{{this.name}}</td>
+            <td>{{this.name_pollutant}}</td>
+            <td>{{this.valueresult}}</td>
+        </tr>
+    {{/each}}
+</table>
 </body>
 </html>
