added sum to filter-by-object

--- a/views/filter-by-object.hbs
+++ b/views/filter-by-object.hbs
@@ -7,6 +7,7 @@
     <title>By object</title>
 </head>
 <body>
+    <h1>Total taxes to pay for {{object}}:{{sum}} UAH</h1>
     <table>
         <tr><th>N</th><th>Object</th><th>Pollutant</th><th>Pollution</th><th>Value (UAH)</th></tr>
         {{#each results}}
