--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,7 +70,7 @@
     <input type="submit" value="Calculate Results" >
 </form>
 <table>
-    <tr><th>N</th><th>Object</th><th></th><th>Pollutant</th><th>Value (UAH)</th></tr>
+    <tr><th>N</th><th>Object</th><th>Pollutant</th><th>Value (UAH)</th></tr>
     {{#each results}}
         <tr>
             <td>{{this.idresults}}</td>
