--- a/views/filter-results.hbs
+++ b/views/filter-results.hbs
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>By object</title>
+    <title>By {{filter}}</title>
     <style>
         .sum-style {
             font-size: 24px;
-            color: #4760ff;
+            color: #000000;
             background: #FFFFE0;
             padding: 5px 10px;
             border: 1px solid #FF6347;
             border-radius: 5px;
             display: inline-block;
         }
+        a:link {
+            color: cadetblue;
+        }
+        a:visited {
+            color: cadetblue;
+        }
     </style>
 </head>
 <body>
-<h1>Total taxes to pay for {{object}}:</h1>
+<h3>Total taxes to pay for {{filter}}:</h3>
 <p class="sum-style"> Sum: {{sum}} UAH</p>
 <table>
-    <tr><th>N</th><th>Object</th><th>Pollutant</th><th>Pollution</th><th>Value (UAH)</th></tr>
+    <tr><th>N</th><th>Object</th><th>Pollutant</th><th>Pollution</th><th>Year</th><th>Value (UAH)</th></tr>
     {{#each results}}
         <tr>
             <td>{{this.idresults}}</td>
-            <td>{{this.name}}</td>
+            <td><a href="/filter-by-object/{{this.idobject}}">{{this.name}}</a></td>
             <td>{{this.name_pollutant}}</td>
             <td>{{this.valuepollution}}</td>
+            <td><a href="/filter-by-year/{{this.year}}">{{this.year}}</a></td>
             <td>{{this.valueresult}}</td>
         </tr>
     {{/each}}
 </table>
+<a href="/">GO BACK</a>
 </body>
 </html>
