--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,14 +49,23 @@
         <th>Name</th>
         <th>Mass Consumption</th>
         <th>Tax</th>
-        <th></th>
+        <th>RfC</th>
+        <th>SF</th>
+        <th>Toxicity Class</th>
+        <th>TLV</th>
+        <th>Mass Flow Value</th>
     </tr>
     {{#each pollutant}}
         <tr>
             <td>{{this.idpollutant}}</td>
             <td>{{this.name_pollutant}}</td>
-            <td>{{this.mass_consumption}}</td>
+            <td align="center">{{this.mass_consumption}}</td>
             <td>{{this.tax}}</td>
+            <td align="center">{{this.reference_concentration}}</td>
+            <td>{{this.slope_factor}}</td>
+            <td align="center">{{this.toxicity_class}}</td>
+            <td>{{this.tlv}}</td>
+            <td>{{this.mass_flow}}</td>
             <td>
                 <a href="/edit-pollutant/{{this.idpollutant}}">Edit</a>
                 <form action="delete-pollutant/{{this.idpollutant}}" method="POST" style="display:inline;">
@@ -75,6 +84,7 @@
         <th>Pollutant</th>
         <th>Value</th>
         <th>Year</th>
+        <th>Concentration</th>
         <th></th>
     </tr>
     {{#each pollution}}
@@ -84,6 +94,7 @@
             <td>{{this.name_pollutant}}</td>
             <td>{{this.valuepollution}}</td>
             <td>{{this.year}}</td>
+            <td>{{this.concentration}}</td>
             <td>
                 <a href="/edit-pollution/{{this.idpollution}}">Edit</a>
                 <form action="delete-pollution/{{this.idpollution}}" method="POST" style="display:inline;">
