implement danger calculation

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -170,7 +170,7 @@
     </tr>
     {{#each danger}}
         <tr>
-            <td>{{this.idresults}}</td>
+            <td>{{this.iddanger}}</td>
             <td><a href="/filter-by-object/{{this.idobject}}">{{this.name}}</a></td>
             <td>{{this.name_pollutant}}</td>
             <td><a href="/filter-by-year/{{this.year}}">{{this.year}}</a></td>
