implement losses calculations

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,6 +76,10 @@
     {{/each}}
 </table>
 <h1>List of pollution</h1>
+<form action="/calculate-losses" method="POST" style="display:inline;">
+    <input type="submit" value="Calculate Losses">
+</form>
+<br><br><br>
 <p><a href="/add-pollution">Add pollution</a></p>
 <table>
     <tr>
