updated add-pollutant and edit-pollutant

--- a/views/pollutant/add-pollutant.hbs
+++ b/views/pollutant/add-pollutant.hbs
@@ -15,6 +15,16 @@
     <input name="mass_consumption" class="field"><br><br>
     <label>Tax</label><br>
     <input name="tax" class="field"><br><br>
+    <label>Reference concentration</label><br>
+    <input name="reference_concentration" class="field"><br><br>
+    <label>Slope Factor</label><br>
+    <input name="slope_factor" class="field"><br><br>
+    <label>Toxicity Class</label><br>
+    <input name="toxicity_class" class="field"><br><br>
+    <label>TLV</label><br>
+    <input name="tlv" class="field"><br><br>
+    <label>Mass Flow Rate</label><br>
+    <input name="mass_flow" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
