--- a/views/pollutant/edit-pollutant.hbs
+++ b/views/pollutant/edit-pollutant.hbs
@@ -16,6 +16,16 @@
     <input name="mass_consumption" value="{{pollutant.mass_consumption}}"  class="field"><br><br>
     <label>Tax</label><br>
     <input name="tax" value="{{pollutant.tax}}"  class="field"><br><br>
+    <label>Reference concentration</label><br>
+    <input name="reference_concentration" value="{{pollutant.reference_concentration}}" class="field"><br><br>
+    <label>Slope Factor</label><br>
+    <input name="slope_factor" value="{{pollutant.slope_factor}}" class="field"><br><br>
+    <label>Toxicity Class</label><br>
+    <input name="toxicity_class" value="{{pollutant.toxicity_class}}" class="field"><br><br>
+    <label>TLV</label><br>
+    <input name="tlv" value="{{pollutant.tlv}}" class="field"><br><br>
+    <label>Mass Flow Rate</label><br>
+    <input name="mass_flow" value="{{pollutant.mass_flow}}" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
