updated add-pollution and edit-pollution

--- a/views/pollution/add-pollution.hbs
+++ b/views/pollution/add-pollution.hbs
@@ -25,6 +25,8 @@
     <input name="valuepollution" class="field"><br><br>
     <label>Year</label><br>
     <input name="year" class="field"><br><br>
+    <label>Concentration</label><br>
+    <input name="concentration" class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
