--- a/views/pollution/edit-pollution.hbs
+++ b/views/pollution/edit-pollution.hbs
@@ -26,6 +26,10 @@
     <input name="valuepollution" value="{{pollution.valuepollution}}"  class="field"><br><br>
     <label>Year</label><br>
     <input name="year" value="{{pollution.year}}"  class="field"><br><br>
+    <label>Concentration</label><br>
+    <input name="concentration" value="{{pollution.concentration}}"  class="field"><br><br>
+    <label>Losses</label><br>
+    <input name="losses" value="{{pollution.losses}}"  class="field"><br><br>
     <input type="submit" value="Send">
 </form>
 <a href="/">GO BACK</a>
